fix up spacing on back link for question view

--- a/static/main.css
+++ b/static/main.css
@@ -480,3 +480,6 @@ main {
   width:calc(var(--mini-unit) * 47);
 }
 
+.back-link{
+  margin-bottom:calc(var(--mini-unit) * 2)
+}
